Fix alignment of contact

--- a/css/main.css
+++ b/css/main.css
@@ -23,19 +23,6 @@ a:focus {
   top: 0;
 }
 
-.nav ul a {
-  text-decoration: none;
-  color: #3A3E3C;
-  padding: 0 9px;
-  padding: 10px;
-}
-
-.nav ul a:hover {
-  background-color: #F3950D;
-  color: #fff;
-  border-radius: 10px;
-}
-
 .nav {
   padding: 2em;
   overflow: hidden;
@@ -49,21 +36,28 @@ a:focus {
   z-index: 1;
 }
 
+.logo-wrapper {
+  float: left;
+}
+
+.contact-wrapper {
+  float: right;
+}
+
+.logo {
+  width: 60px;
+}
+
+.contact {
+  width: 65px;
+}
+
 .photos {
   z-index: 0;
 }
 
-.nav a {
-  display: block;
-}
-
 main {
   margin-top: 150px;
-}
-
-.logo-wrapper {
-  position: absolute;
-  top: 2.5%;
 }
 
 .photos div div a img,
@@ -73,11 +67,6 @@ main {
 
 .photos div div a img.next-project {
   width: 150px;
-}
-
-.h-logo {
-  width: 270px;
-  margin: -20px;
 }
 
 footer {
@@ -207,14 +196,6 @@ ul li::before {
 
 a {
   text-decoration: none;
-}
-
-.logo {
-  width: 60px;
-}
-
-.contact {
-  width: 60px;
 }
 
 @media only screen and (min-width: 25em) {
